--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -25,3 +25,28 @@ float: right !important;
 .register a {
 float: right !important;
 }
+
+.ant-menu-horizontal > .ant-menu-item > a, .ant-menu-horizontal > .ant-menu-submenu > a
+{
+  display: inline-block !important;
+}
+.container{
+  margin-top: 20px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.leftContainer{
+  width: 400px;
+  float: left;
+}
+
+.carousel{
+  margin-top: 20px;
+  width: 400px;
+  height: 200px;
+  float: left;
+  background-color: #2db7f5;
+  text-align: center;
+  line-height: 200px;
+}
