--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -61,6 +61,17 @@ float: right !important;
     text-align: left;
     font-size: 14px;
     margin-bottom: 10px;
+    width:600px;
+
+}
+.topNewsListimage{
+    float: left;
+    text-align: left;
+    font-size: 14px;
+    margin-bottom: 10px;
+    width:420px;
+    margin-top: 10px
+
 }
 
 .topNewsList a {
@@ -70,8 +81,9 @@ float: right !important;
 
 .tabs_news {
     padding-left: 10px;
-    width: 460px;
+    width: 660px;
     float: left;
+    margin-left: 30px
 }
 
 .tabs_product {
@@ -131,9 +143,7 @@ float: right !important;
     color: #999;
 }
 
-.register{
-  float: right !important;
-}
+
 
 /*image block******END*****/
 
